--- a/index.html
+++ b/index.html
@@ -1,18 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by iFlxy</title>
-  <link rel="stylesheet" href="./style.css">
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
+</style>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+</style>
+  <style>
+  body {
+    overflow: hidden;
+  }
+  #titlemain {
+      top: 46%;
+      position: absolute;
+      font-family: "Nunito";
+      transform: translateY(1000%);
+      width: 99%;
+      display: flex;
+      justify-content: center;
+      align-items: center
+      perspective: 1000px;
+      perspective-origin: 50% 50%;
+      -webkit-transform: translateY(1000%);
+}
+#subtitle {
+      top: 50%;
+      position: absolute;
+      font-family: "Nunito";
+      transform: translateY(1000%);
+      width: 99%;
+      display: flex;
+      justify-content: center;
+      align-items: center
+      perspective: 1000px;
+      perspective-origin: 50% 50%;
+      -webkit-transform: translateY(1000%);
+      font-size: 24px;
+      font-weight: 200;
+      animation-delay: 3s;
+}  
+  .slide-in {
+      animation: slide-in 2.6s forwards;
+      -webkit-animation: slide-in 2.6s forwards;
+  }
 
+  @keyframes slide-in {
+      100% { transform: translateY(-50%); }
+  }
+
+  @-webkit-keyframes slide-in {
+      100% { -webkit-transform: translateY(-50%); }
+  }
+
+  </style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id='head'><img src='https://i.imgur.com/R2Bf1p2.png' style='max-width: 60vh;'></img></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<div id="follow"><img src="https://i.imgur.com/nBVcSaY.png" style='max-width: 60vh;' /></div>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+  <div id="titlemain" class="slide-in">
+    <h2 id="kcxd">iflxy.xyz is under construction</h2>
+  </div>
+  <div id="subtitle" class="slide-in">
+    <p id="kcxd">Come back later</p>
+  </div>
 </body>
 </html>
